--- a/Kafka-Fleck-Server/Kafka-Fleck-Server/Kafka-Fleck-Server.csproj
+++ b/Kafka-Fleck-Server/Kafka-Fleck-Server/Kafka-Fleck-Server.csproj
@@ -8,4 +8,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+	<PackageReference Include="Confluent.Kafka" Version="1.8.2" />
+    <PackageReference Include="Fleck" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="client.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
